Pipewire: improve handling for format_pod failures

Fixes: QTBUG-135312
Change-Id: Ic55bae6d266c9aceccf98b200d85c5396bc85e62
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>